QE-155 Fix layout shift in open lightbox

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/media-lightbox/style.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/media-lightbox/style.scss
@@ -53,9 +53,11 @@
 	&__caption {
 		display: block;
 		color: var(--color-white);
-		margin-top: var(--spacing-4);
-		margin-inline: auto;
 		width: fit-content;
+		position: fixed;
+		bottom: 5vh;
+		left: 50%;
+		translate: -50%;
 	}
 
 	dialog {
@@ -99,6 +101,7 @@
 		}
 
 		img {
+			height: auto;
 			max-height: 80vh;
 		}
 	}
@@ -197,9 +200,5 @@ tp-lightbox.media-lightbox[loading] {
 		width: 25px;
 		height: 25px;
 		animation: lightbox-loading 0.8s infinite linear;
-	}
-
-	.media-lightbox__caption {
-		display: none;
 	}
 }
